update index file
add several files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D BPD Rate Graphs</title>
+  <title>3D Rate Graphs</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,11 +28,59 @@
   </style>
 </head>
 <body>
+  <h2>Interactive 3D Death Rate Graphs</h2>
+
+  <iframe src="SurvDeath2_Rate_Normal_Surface.html"></iframe>
+  <iframe src="SurvDeath2_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="SurvDeath2_Rate_Difference_Surface.html"></iframe>
+
   <h2>Interactive 3D BPD Rate Graphs</h2>
+
+  <iframe src="BPDSev2_Rate_Normal_Surface.html"></iframe>
+  <iframe src="BPDSev2_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="BPDSev2_Rate_Difference_Surface.html"></iframe>
+
+  <h2>Interactive 3D BPD &/or Death Rate Graphs</h2>
 
   <iframe src="BPDSevDeath2_Rate_Normal_Surface.html"></iframe>
   <iframe src="BPDSevDeath2_Rate_Abnormal_Surface.html"></iframe>
   <iframe src="BPDSevDeath2_Rate_Difference_Surface.html"></iframe>
+  
+  <h2>Interactive 3D NEC Rate Graphs</h2>
+
+  <iframe src="NEC22_Rate_Normal_Surface.html"></iframe>
+  <iframe src="NEC22_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="NEC22_Rate_Difference_Surface.html"></iframe>
+
+  <h2>Interactive 3D NEC &/or Death Rate Graphs</h2>
+
+  <iframe src="NEC_or_Death_Rate_Normal_Surface.html"></iframe>
+  <iframe src="NEC_or_Death_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="NEC_or_Death_Rate_Difference_Surface.html"></iframe>
+
+  <h2>Interactive 3D RDS Rate Graphs</h2>
+
+  <iframe src="RDS2_Rate_Normal_Surface.html"></iframe>
+  <iframe src="RDS2_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="RDS2_Rate_Difference_Surface.html"></iframe>
+
+  <h2>Interactive 3D RDS &/or Death Rate Graphs</h2>
+
+  <iframe src="RDS_or_Death_Rate_Normal_Surface.html"></iframe>
+  <iframe src="RDS_or_Death_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="RDS_or_Death_Rate_Difference_Surface.html"></iframe>
+
+  <h2>Interactive 3D IVH Rate Graphs</h2>
+
+  <iframe src="SIVH2_Rate_Normal_Surface.html"></iframe>
+  <iframe src="SIVH2_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="SIVH2_Rate_Difference_Surface.html"></iframe>
+  
+  <h2>Interactive 3D IVH &/or Death Rate Graphs</h2>
+
+  <iframe src="IVH_or_Death_Rate_Normal_Surface.html"></iframe>
+  <iframe src="IVH_or_Death_Rate_Abnormal_Surface.html"></iframe>
+  <iframe src="IVH_or_Death_Rate_Difference_Surface.html"></iframe>
 
 </body>
 </html>
