change index for bpd

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <iframe src="BPDSevDeath2_Rate_Abnormal_Surface.html"></iframe>
   <iframe src="BPDSevDeath2_Rate_Difference_Surface.html"></iframe>
   
-  <h2>Interactive 3D NEC Rate Graphs</h2>
+  <!-- <h2>Interactive 3D NEC Rate Graphs</h2>
 
   <iframe src="NEC22_Rate_Normal_Surface.html"></iframe>
   <iframe src="NEC22_Rate_Abnormal_Surface.html"></iframe>
@@ -80,7 +80,7 @@
 
   <iframe src="IVH_or_Death_Rate_Normal_Surface.html"></iframe>
   <iframe src="IVH_or_Death_Rate_Abnormal_Surface.html"></iframe>
-  <iframe src="IVH_or_Death_Rate_Difference_Surface.html"></iframe>
+  <iframe src="IVH_or_Death_Rate_Difference_Surface.html"></iframe> -->
 
 </body>
 </html>
